# Hadoop-Spark

./: README.md  docker-compose.yml  pyproject.toml
Jobs/: produce_date_from_kafka.py
notebooks/: ReadHadoop.ipynb  ec_web_logs_age_group_prediction_model.ipynb  ec_web_logs_csv_to_parquet.ipynb  ec_web_logs_gender_prediction_model.ipynb
notebooks/.ipynb_checkpoints/: ingest_data-checkpoint.ipynb  prediction_data_from_kafka-checkpoint.ipynb
