[tool.poetry]
name = "hadoop-spark"
version = "0.1.0"
description = ""
authors = ["HsiuChuanHsu <hchsu2106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datetime = "^5.5"
confluent-kafka = "^2.4.0"
pyspark = "^3.5.1"
numpy = "^2.0.0"
hdfs = "^2.7.3"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
